--- a/resources/templates/home.html
+++ b/resources/templates/home.html
@@ -2,13 +2,17 @@
 {% block content %}
   <div class="row">
     <div class="span12">
-      <ul class="cats">
+      <ul class="list-group cats">
         {% for cat in cats %}
-        <li>
-          <time>{{cat.timestamp|date:"yyyy-MM-dd HH:mm"}}</time>
-          <p>Name: {{cat.name}}</p>
-          <p>Owner: {{cat.owner}}</p>
-          <p>Size: {{cat.size}}</p>
+        <li class="list-group-item cleafix">
+          <h3 class="h4 pull-right">
+            <small class="text-uppercase">Size: </small>
+            {{cat.size}}
+          </h3>
+          <h2 class="h4">
+            Name: {{cat.name}}
+          </h2>
+          <h4 class="h5">Owner: {{cat.owner}}</h4>
         </li>
         {% endfor %}
       </ul>
